test/scale/templates/kwok-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-TEMP_NAME
  namespace: scale-test
  labels:
    app: scale-test
    is-kwok: "true"
spec:
  replicas: TEMP_REPLICAS
  selector:
    matchLabels:
      app: scale-test
      is-kwok: "true"UNIQUE_LABELS_PER_DEPLOYMENT_6_SPACESSHARED_LABELS_6_SPACESSHARED_LABEL_KEYS_PER_DEPLOYMENT_6_SPACES
  template:
    metadata:
      labels:
        app: scale-test
        is-kwok: "true"UNIQUE_LABELS_PER_DEPLOYMENT_8_SPACESSHARED_LABELS_8_SPACESSHARED_LABEL_KEYS_PER_DEPLOYMENT_8_SPACES
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - kwok
      # A taints was added to an automatically created Node.
      # You can remove taints of Node or add this tolerations.
      tolerations:
        - key: "kwok.x-k8s.io/node"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: fake-container
          image: fake-image
