test/scale/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: TEMP_NAME
  namespace: scale-test
spec:
  podSelector:
    matchLabels:
      TEMP_LABEL_NAME: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          TEMP_INGRESS_NAME: "true"
  egress:
  - to:
    - podSelector:
        matchLabels:
          TEMP_EGRESS_NAME: "true"
  policyTypes:
  - Ingress
  - Egress
