test/scale/templates/oh_my_god_cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: TEMP_NAME
  namespace: scale-test
spec:
  endpointSelector:
    matchLabels:
      TEMP_LABEL_NAME: val
      TEMP_LABEL_NAME_2: val
      TEMP_LABEL_NAME_3: val
      TEMP_LABEL_NAME_4: val
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: UDP
           - port: "53"
             protocol: TCP
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - TEMP_DNS_PATTERN_1: val
              - TEMP_FQDN_PATTERN_2: val
              - TEMP_FQDN_PATTERN_3: val
              - TEMP_FQDN_PATTERN_4: val
              - TEMP_FQDN_PATTERN_5: val
              - TEMP_FQDN_PATTERN_6: val
    - toFQDNs:
        - TEMP_FQDN_PATTERN_1: val
        - TEMP_FQDN_PATTERN_2: val
        - TEMP_FQDN_PATTERN_3: val
        - TEMP_FQDN_PATTERN_4: val
        - TEMP_FQDN_PATTERN_5: val
        - TEMP_FQDN_PATTERN_6: val
