test/scale/templates/real-agnhost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: TEMP_NAME
  namespace: scale-test
  labels:
    app: scale-test
    is-real: "true"
spec:
  replicas: TEMP_REPLICAS
  selector:
    matchLabels:
      app: scale-test
      is-real: "true"UNIQUE_LABELS_PER_DEPLOYMENT_6_SPACESSHARED_LABELS_6_SPACESSHARED_LABEL_KEYS_PER_DEPLOYMENT_6_SPACES
  template:
    metadata:
      labels:
        app: scale-test
        name: TEMP_NAME
        is-real: "true"UNIQUE_LABELS_PER_DEPLOYMENT_8_SPACESSHARED_LABELS_8_SPACESSHARED_LABEL_KEYS_PER_DEPLOYMENT_8_SPACES
    spec:
      nodeSelector:
        scale-test: "true"
      containers:
      - command:
        - /agnhost
        - serve-hostname
        - --tcp
        - --http=false
        - --port
        - "80"
        image: k8s.gcr.io/e2e-test-images/agnhost:2.33
        imagePullPolicy: IfNotPresent
        name: cont-80-tcp
        ports:
        - containerPort: 80
          protocol: TCP
