test/scale/templates/real-dns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: TEMP_NAME
  namespace: scale-test
  labels:
    app: scale-test
    is-real: "true"
    name: TEMP_NAME
spec:
  replicas: TEMP_REPLICAS
  selector:
    matchLabels:
      app: scale-test
      is-real: "true"OTHER_LABELS_6_SPACES
  template:
    metadata:
      labels:
        app: scale-test
        name: TEMP_NAME
        is-real: "true"OTHER_LABELS_8_SPACES
    spec:
      nodeSelector:
        scale-test: "true"
      containers:
      - name: container
        image: acnpublic.azurecr.io/fqdnpolicy/senddns25
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: ["./sendReq.sh; echo helloworld>hello.txt; php -S 0.0.0.0:80"]
        securityContext:
          privileged: true
