test/scale/templates/real-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: TEMP_NAME
  namespace: scale-test
  labels:
    app: scale-test
    is-real: "true"
spec:
  selector:
    app: scale-test
    name: TEMP_DEPLOYMENT_NAME
    is-real: "true"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
