test/scale/templates/service-accounts.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kapinger-role
  namespace: scale-test
rules:
  - apiGroups: [""]
    resources: ["services", "pods"]
    verbs: ["get", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kapinger-rolebinding
  namespace: scale-test
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kapinger-role
subjects:
  - kind: ServiceAccount
    name: default
    namespace: scale-test
