test/scale/templates/simple_cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: TEMP_NAME
  namespace: scale-test
spec:
  endpointSelector:
    matchLabels:
      TEMP_LABEL_NAME: val
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: UDP
           - port: "53"
             protocol: TCP
          rules:
            dns:
              - TEMP_DNS_PATTERN_1: val
    - toFQDNs:
        - TEMP_FQDN_PATTERN_1: val
