test/scale/templates/unapplied-ciliumclusterwidenetworkpolicy.yaml
kind: CiliumClusterwideNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: TEMP_NAME
specs:
  - endpointSelector:
      matchLabels:
        non-existent-key: val
    ingress:
      - fromEndpoints:
        - matchLabels:
            non-existent-key: val
    egress:
      - toEndpoints:
        - matchLabels:
            non-existent-key: val
