test/scale/templates/unapplied-ciliumnetworkpolicy.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: TEMP_NAME
  namespace: scale-test
specs:
  - endpointSelector:
      matchLabels:
        non-existent-key: val
    ingress:
      - fromEndpoints:
        - matchLabels:
            non-existent-key: val
    egress:
      - toEndpoints:
        - matchLabels:
            non-existent-key: val
