test/scale/templates/unapplied-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: TEMP_NAME
  namespace: scale-test
spec:
  podSelector:
    matchLabels:
      non-existent-key: val
  ingress:
  - from:
    - podSelector:
        matchLabels:
          non-existent-key: val
  egress:
  - to:
    - podSelector:
        matchLabels:
          non-existent-key: val
  policyTypes:
  - Ingress
  - Egress
